--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "paper": "^0.12.4",
     "quasar": "^2.7.1",
     "require-context": "^1.1.0",
-    "video.js": "^7.0.3",
+    "video.js": "^7.19.2",
     "videojs-youtube": "^2.6.1",
+    "videojs-contrib-quality-levels": "^2.1.0",
+    "videojs-hls-quality-selector": "^1.1.4",
     "vue": "^3.2.29",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.14"
